# spookyhook

./: .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg  setup.py  spookyhook
spookyhook/: __init__.py  spookyhook  spookyhook.py
