from setuptools import setup
setup(name="spookyhook", version="0.0.1")

[metadata]
name = spookyhook
version = 0.0.1
description = Executes arbitrary code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aderon2/spookyhook
author = Evan Dingman
