[metadata]
name = spookyhook
version = 0.0.7
description = Executes arbitrary code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aderon2/spookyhook
author = Evan Dingman

[options.entry_points]
console_scripts =
    spookyhook = spookyhook.spookyhook:arbitraryExecute
