[metadata]
name = spookyhook
version = 1.0.0
description = Executes arbitrary code.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aderon2/spookyhook
author = Evan Dingman

[options.entry_points]
console_scripts =
    spookyhook = spookyhook.spookyhook:arbitraryExecute
